# GodotExample

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: godot-cpp.cmake  godot-engine.cmake
project/: icon.svg.import  main.tscn  project.godot  roguelite.gdextension  roguelite.gdextension.uid
src/: main.cpp  main.hpp  register_types.cpp  register_types.hpp
